--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "detect-libc": "^1.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
@@ -32,7 +33,7 @@
     "nodemailer": "^6.4.6",
     "parcel-bundler": "^1.12.4",
     "pug": "^3.0.0",
-    "sharp": "^0.25.4",
+    "sharp": "^0.29.3",
     "slugify": "^1.4.0",
     "stripe": "^8.64.0",
     "validator": "^13.0.0",
